<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.vepo</groupId>
	<artifactId>io.vepo.bots.twitter</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<name>Twitter Bots</name>
	<description>This bot research will investigate bot activity and expose it.</description>
	<packaging>jar</packaging>

	<properties>
		<maven.compiler.source>15</maven.compiler.source>
		<maven.compiler.target>15</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.vepo</groupId>
			<artifactId>io.vepo.twitter4j</artifactId>
			<version>0.0.3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.3.0-alpha5</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>15</source>
					<target>15</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<mainClass>io.vepo.bots.twitter.TwitterBotAnalyzer</mainClass>
					<arguments>--add-modules io.vepo.twitter4j</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>